# open-gl-stuff

./: CMakeLists.txt  README.md
src/: glad.c  main.cpp  stddeps.h  stdglm.h
src/GettingStarted/CoordinateSystems/: 3DTest.cpp  rotatingTexture.frag  rotatingTexture.vert
src/GettingStarted/HelloWindow/: Exercises.cpp  HelloWindow.cpp
src/GettingStarted/Shaders/: ShadersExample.cpp  color.frag  color.vert
src/GettingStarted/Textures/: TextureTest.cpp  coloredTexture.vert
src/GettingStarted/Transformations/: TransformationsTest.cpp  rotatingTexture.frag  rotatingTexture.vert
src/Utils/: Shader.cpp  Shader.h  Utils.cpp  Utils.h
